@@ -12,8 +12,8 @@ begin
     gem.authors = ["Rahul Kumar"]
     gem.rubyforge_project = "todorb"
     #gem.add_development_dependency "thoughtbot-shoulda", ">= 0"
-    gem.add_development_dependency "subcommand", ">= 1.0.4"
-    gem.add_dependency "subcommand", ">= 1.0.4"
+    gem.add_development_dependency "subcommand", ">= 1.0.5"
+    gem.add_dependency "subcommand", ">= 1.0.5"
     # gem is a Gem::Specification... see http://www.rubygems.org/read/chapter/20 for additional settings
   end
   Jeweler::GemcutterTasks.new
