@@ -5,11 +5,11 @@
 
 Gem::Specification.new do |s|
   s.name = %q{todorb}
-  s.version = "1.1.1"
+  s.version = "1.2.0"
 
   s.required_rubygems_version = Gem::Requirement.new(">= 0") if s.respond_to? :required_rubygems_version=
   s.authors = ["Rahul Kumar"]
-  s.date = %q{2010-06-24}
+  s.date = %q{2010-07-08}
   s.default_executable = %q{todorb}
   s.description = %q{command-line program that manages a todo list text file, incl subtasks, status, priorities etc }
   s.email = %q{sentinel1879@gmail.com}
@@ -26,10 +26,10 @@ Gem::Specification.new do |s|
      "Rakefile",
      "VERSION",
      "bin/todorb",
-     "lib/common/cmdapp.rb",
-     "lib/common/colorconstants.rb",
-     "lib/common/sed.rb",
      "lib/todorb.rb",
+     "lib/todorb/common/cmdapp.rb",
+     "lib/todorb/common/colorconstants.rb",
+     "lib/todorb/common/sed.rb",
      "tests/Makefile",
      "tests/README",
      "tests/aggregate-results.sh",
@@ -68,15 +68,15 @@ Gem::Specification.new do |s|
     s.specification_version = 3
 
     if Gem::Version.new(Gem::RubyGemsVersion) >= Gem::Version.new('1.2.0') then
-      s.add_development_dependency(%q<subcommand>, [">= 1.0.4"])
-      s.add_runtime_dependency(%q<subcommand>, [">= 1.0.4"])
+      s.add_development_dependency(%q<subcommand>, [">= 1.0.5"])
+      s.add_runtime_dependency(%q<subcommand>, [">= 1.0.5"])
     else
-      s.add_dependency(%q<subcommand>, [">= 1.0.4"])
-      s.add_dependency(%q<subcommand>, [">= 1.0.4"])
+      s.add_dependency(%q<subcommand>, [">= 1.0.5"])
+      s.add_dependency(%q<subcommand>, [">= 1.0.5"])
     end
   else
-    s.add_dependency(%q<subcommand>, [">= 1.0.4"])
-    s.add_dependency(%q<subcommand>, [">= 1.0.4"])
+    s.add_dependency(%q<subcommand>, [">= 1.0.5"])
+    s.add_dependency(%q<subcommand>, [">= 1.0.5"])
   end
 end
 
